[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "venky-space"
version = "1.3.0"
description = "Meta-Hack OpenEnv Optimizer"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Maddi Venkata Teja" }]
dependencies = [
    "fastapi",
    "uvicorn",
    "psutil",
    "requests"
]

[project.scripts]
openenv-start = "uvicorn app:app --host 0.0.0.0 --port 7860"
