[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "venky-space"
version = "1.3.0"
description = "Meta-Hack OpenEnv Optimizer: A cloud maintenance simulator for server patching."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Maddi Venkata Teja" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "pydantic",
    "psutil",
    "requests",
    "google-generativeai"
]

[tool.setuptools]
# This ensures your python files are treated as part of the package
py-modules = ["app", "inference"]

[project.scripts]
# If the platform strictly requires a script, this is the standard format
openenv-start = "app:main"
